# CAD_Refinement

./: README.md  rviz.rviz
pcd/: ioniq5_low_above_outside.pcd
src/cad_registration/: CMakeLists.txt  package.xml
src/cad_registration/include/: cad_registration_config.hpp  cad_registration_node.hpp
src/cad_registration/launch/: cad_registration.launch
src/cad_registration/src/: cad_registration_node.cpp
src/interface/: interface_objects.hpp  rosbridge_objects.hpp  rosbridge_time.hpp
src/msg/hyu_msgs/: CMakeLists.txt  package.xml
src/msg/hyu_msgs/msg/: DetectObject.msg  DetectObjects.msg  PointsObject.msg  PointsObjects.msg
